crearnamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vlan2
  annotations:
    "projectcalico.org/ipv4pools": "[\"10.244.2.0/24\"]"  # Define la subred deseada para el namespace vlan2
