alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  containers:
  - name: alpine-container
    image: alpine
    command: ["sleep", "infinity"]  # Para mantener el contenedor en ejecución
