backend-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: my-vlan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: mateogonzalezamortegui/backend-adopt-pet:latest
        ports:
        - containerPort: 3001  # Puerto por defecto en el que escucha NestJS
