backendpro.yaml
##Este es el pro
apiVersion: apps/v2
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: mateogonzalezamortegui/backend-adopt-pet:latest #Ahora si deberia funcionar :((
        ports:
        - containerPort: 3001  # Puerto por defecto en el que escucha NestJS
