frontend-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: my-vlan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: frontend-adopt-pet:latest
        ports:
        - containerPort: 3000  # El puerto en el que escucha tu frontend :)
