front_t.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000  # Cambia esto al puerto en el que escucha tu frontend
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: mateogonzalezamortegui/frontend-adopt-pet:latest  # Cambia esto a tu imagen de Docker
          ports:
            - name: http
              containerPort: 3000  # Cambia esto al puerto en el que escucha tu frontend
