frontservices.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service1
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalance
