mongo2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-remote-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: database
