ngninx-servicio.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngninx-service
  namespace: myvlan
spec:
  selector:
    app: ngninx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
