prueba2.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 27017  # Puerto de MongoDB dentro del clúster
    targetPort: 27017  # Puerto de MongoDB en los pods
  type: LoadBalancer
