servicios.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: myvlan
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: myvlan
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: myvlan
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: NodePort
