ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048
  namespace: ngrok-ingress-controller
spec:
  ingressClassName: ngrok
  rules:
    - host: expert-impala-tidy.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: game-2048
                port:
                  number: 80
